manifests/argocd-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080  # This exposes the service on a specific port
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 30443  # This exposes the service on another specific port
  selector:
    app.kubernetes.io/name: argocd-server
