manifests/linkerdviz-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerdviz-ingress
  namespace: linkerd-viz
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8084
